# goocanvas

./: .gitignore  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure.in  goocanvas-2.0.pc.in  goocanvas-3.0.pc.in  goocanvas.doap
bindings/gjs/: demo.js
bindings/python/: Makefile.am  demo.py
bindings/seed/: demo.js
demo/: Makefile.am  demo-animation.c  demo-arrowhead.c  demo-clipping.c  demo-events.c  demo-features.c  demo-fifteen.c  demo-focus.c  demo-grabs.c  demo-groups.c  demo-item.c  demo-large-items.c  demo-large-line.c  demo-large-rect.c  demo-paths.c  demo-scalability.c  demo-table.c  demo.c  generic-position-demo.c  mv-demo-animation.c  mv-demo-arrowhead.c  mv-demo-clipping.c  mv-demo-events.c  mv-demo-features.c  mv-demo-fifteen.c  mv-demo-focus.c  mv-demo-grabs.c  mv-demo-paths.c  mv-demo-scalability.c  mv-demo-table.c  mv-demo.c  mv-generic-position-demo.c  mv-scalability-demo.c  mv-simple-demo.c  mv-table-demo.c  scalability-demo.c  simple-demo.c  table-demo.c  units-demo.c  widgets-demo.c
docs/: .cvsignore  Makefile.am  architecture.xml  coordinates.xml  creating-items.xml  goocanvas-docs.sgml  goocanvas-sections.txt  goocanvas.types  goocanvas2-docs.sgml  goocanvas2-sections.txt  goocanvas3-docs.sgml  model-view-canvas.xml  overview.xml  simple-canvas.xml  wysiwyg.xml
po/: ChangeLog  LINGUAS  Makevars  cs.po  de.po  en_GB.po  es.po  goocanvas.pot  id.po  ja.po  nb.po  pl.po  pt_BR.po  sl.po  sr.po  sv.po
src/: GooCanvas.py  Makefile.am  demo-seed.js  demo.py  goocanvas.c  goocanvas.h  goocanvasatk.c  goocanvasellipse.c  goocanvasellipse.h  goocanvasgrid.c  goocanvasgrid.h  goocanvasgroup.c  goocanvasgroup.h  goocanvasimage.c  goocanvasimage.h  goocanvasitem.c  goocanvasitem.h  goocanvasitemmodel.c  goocanvasitemmodel.h  goocanvasitemsimple.c  goocanvasitemsimple.h  goocanvaspath.c  goocanvaspath.h  goocanvaspolyline.c  goocanvaspolyline.h  goocanvasrect.c  goocanvasrect.h  goocanvasstyle.c  goocanvasstyle.h  goocanvastable.c  goocanvastable.h  goocanvastext.c  goocanvastext.h  goocanvasutils.c  goocanvasutils.h  goocanvaswidget.c
